Bug 49876 - [4.7 Regression] FAIL: gfortran.dg/graphite/pr43097.f
Summary: [4.7 Regression] FAIL: gfortran.dg/graphite/pr43097.f
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Sebastian Pop
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-27 18:20 UTC by H.J. Lu
Modified: 2011-07-28 21:59 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2011-07-27 18:30:14


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2011-07-27 18:20:59 UTC
On Linux/ia32, 176838 gave

FAIL: gfortran.dg/graphite/pr43097.f  -O  (internal compiler error)
FAIL: gfortran.dg/graphite/pr43097.f  -O  (test for excess errors)

Revision 176832 is OK.
Comment 1 Sebastian Pop 2011-07-27 18:30:14 UTC
This passes on amd64-linux where I'm testing my changes.
Comment 2 Sebastian Pop 2011-07-27 18:50:32 UTC
Patch:
http://gcc.gnu.org/ml/gcc-patches/2011-07/msg02453.html
Comment 3 Sebastian Pop 2011-07-28 21:57:04 UTC
Author: spop
Date: Thu Jul 28 21:57:00 2011
New Revision: 176900

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=176900
Log:
Fix PR49876: Continue code generation with integer_zero_node on gloog_error

When setting gloog_error, graphite should continue code generation
without early returns, as otherwise the SSA representation would not
be complete.  So set the new expression to integer_zero_node, that
would not require more SSA updates, and continue code generation as
nothing happened.

Regstrapped on amd64-linux.

2011-07-28  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/49876
	* sese.c (rename_uses): Do not return false on gloog_error: set
	the new_expr to integer_zero_node and continue code generation.
	(graphite_copy_stmts_from_block): Remove early exit on gloog_error.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/sese.c
Comment 4 Sebastian Pop 2011-07-28 21:59:29 UTC
Fixed.